formatted the code and included csharpier to the pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,3 +27,9 @@ repos:
     hooks:
       - id: standard-editorconfig
       - id: tomlq
+  - repo: local
+    hooks:
+      - id: csharpier
+        name: CSharpier
+        language: dotnet
+        entry: csharpier
