--- a/calicoslots.csproj
+++ b/calicoslots.csproj
@@ -1,16 +1,14 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
+    <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+        <GamePath>/daten/Games/gog/stardew-valley/game</GamePath>
+        <ModFolderName>Calico Slots</ModFolderName>
+        <EnableHarmony>false</EnableHarmony>
+    </PropertyGroup>
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <GamePath>/daten/Games/gog/stardew-valley/game</GamePath>
-    <ModFolderName>Calico Slots</ModFolderName>
-    <EnableHarmony>false</EnableHarmony>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.4.0" />
-  </ItemGroup>
-
+    <ItemGroup>
+        <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.4.0" />
+    </ItemGroup>
 </Project>
