--- a/calicoslots.csproj
+++ b/calicoslots.csproj
@@ -3,16 +3,18 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <GamePath>/daten/Games/gog/stardew-valley/game</GamePath>
         <ModFolderName>Calico Slots</ModFolderName>
         <EnableHarmony>false</EnableHarmony>
     </PropertyGroup>
     <PropertyGroup>
-        <RootNamespace>stop50.calicoslots</RootNamespace>
+        <RootNamespace>Stop50.CalicoSlots</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Pathoschild.Stardew.ModTranslationClassBuilder" Version="2.2.1" />
+        <PackageReference
+            Include="Pathoschild.Stardew.ModTranslationClassBuilder"
+            Version="2.2.1"
+        />
         <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.4.0" />
     </ItemGroup>
 </Project>
