--- a/calicoslots.csproj
+++ b/calicoslots.csproj
@@ -1,13 +1,27 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
+        <LangVersion>14.0</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <ModFolderName>Calico Slots</ModFolderName>
         <EnableHarmony>false</EnableHarmony>
-    </PropertyGroup>
-    <PropertyGroup>
+        <AssemblyName>CalicoSlots</AssemblyName>
         <RootNamespace>Stop50.CalicoSlots</RootNamespace>
+        <Utf8Output>true</Utf8Output>
+        <ChecksumAlgorithm>Sha256</ChecksumAlgorithm>
+        <GenerateFullPaths>false</GenerateFullPaths>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
+        <DebugSymbols>false</DebugSymbols>
+        <Optimize>true</Optimize>
+        <HighEntropyVA>true</HighEntropyVA>
+        <DebugType>none</DebugType>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)' != 'Release'">
+        <DebugSymbols>true</DebugSymbols>
+        <Optimize>false</Optimize>
+        <DebugType>full</DebugType>
     </PropertyGroup>
 
     <ItemGroup>
